# kitenga_backend

./: Dockerfile  README.md  docker-compose.yaml  gitignore  pyproject.toml  requirements.txt  setup_env.sh  whakairo.sh
kitenga_api/: .env  kitenga_awakens.py  kitenga_fastapi.py  kitengas_api.py
kitenga_db/config/: config.py  supabase_conn.json
kitenga_db/migrations/: supabase_schema.sql
mauri/: foundation.json
scripts/: card_scanner.py  init_card_scan.py
utils/: memory_loops.py
